[package]
name = "app_config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
clap = "3.2.20"
include_dir = "0.7.2"
once_cell = "1.14.0"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_yaml = "0.9.11"
tokio = "1.18.2"
tracing = "0.1.36"

