[package]
name = "curves"
version = "0.1.0"
edition = "2021"

[dependencies]
curv-kzen = { version = "0.10.0", default-features = false, features = ["num-bigint"] }
ethers = "2.0.3"
hex = "0.4.3"
num-bigint = "0.4.3"
num-traits = "0.2.15"
secp256k1 = { version = "0.27.0", features = ["rand-std"] }
sha3 = "0.9"
zeroize = "1.6.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

